@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+          - fix test that broke when I released version 0.09 of
+            Dist::Zilla::Plugin::Test::NoTabs
 
 0.070     2014-08-16 18:48:19Z
           - revert git contributor change from v0.069; opened
